Added in some readynas customizations for performance, and to cut the size of the package down significantly.
git-svn-id: file:///home/awy/mirror/slim/branches/7.0/platforms@17293 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/control
+++ b/readynas/control
@@ -12,7 +12,9 @@ Conflicts: slimp3,slimserver
 Replaces: slimp3,slimserver
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient15off,
- mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser
+ mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser, libfreetype6,
+ libgd2-noxpm, libmad0, libpng12-0, libvorbis0a, libvorbisenc2,
+ libvorbisfile3, sox
 Description: Streaming Audio Server
  SqueezeCenter is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and
