--- a/debian/rules
+++ b/debian/rules
@@ -43,14 +43,18 @@ install:
 	cp -r ${source}/lib ${base}/${share}
 
 	# Make sure we copy in the Bin directory
-#	cp -r ${source}/Bin ${base}/${share}
+	cp -r ${source}/Bin ${base}/${share}
+
+	# Remove the mysqld daemon on purpose, so that we use the system binary
+	rm -rf ${base}/${share}/Bin/i386-linux/mysqld 
 	
 	# Remove non-Linux binary modules and binaries
 	rm -rf ${base}/${share}/CPAN/arch/5.8/darwin-thread-multi-2level
 	rm -rf ${base}/${share}/CPAN/arch/5.8/MSWin32-x86-multi-thread
-#	rm -rf ${base}/${share}/Bin/darwin
-#	rm -rf ${base}/${share}/Bin/MSWin32-x86-multi-thread
-#	rm -rf ${base}/${share}/Bin/powerpc-hardhat-linux
+	rm -rf ${base}/${share}/Bin/darwin
+	rm -rf ${base}/${share}/Bin/MSWin32-x86-multi-thread
+	rm -rf ${base}/${share}/Bin/powerpc-hardhat-linux
+	
 
 	# And aux files needed to run SlimServer
 	cp -r ${source}/Firmware ${base}/${share}
