Reverting change made in revision #18613 for bug #7770. For the time being, the -dev packages will continue to be the requirement because they work by default on almost all systems.
git-svn-id: file:///home/awy/mirror/slim/7.0/trunk/platforms@18649 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -10,7 +10,7 @@ Architecture: all
 Conflicts: slimp3,slimserver
 Replaces: slimp3,slimserver
 Depends: perl (>= 5.8.1),
- mysql-server-4.1 | mysql-server-5.0, libmysqlclient14 | libmysqlclient15,
+ mysql-server-4.1 | mysql-server-5.0, libmysqlclient14-dev | libmysqlclient15-dev,
  mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser
 Description: Streaming Audio Server
  SlimServer is a cross-platform streaming server that supports a wide range
