Removing the flac binary from the debian build per bug #7279.
git-svn-id: file:///home/awy/mirror/slim/7.0/trunk/platforms@18823 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -48,6 +48,9 @@ install:
 	# Remove the mysqld daemon on purpose, so that we use the system binary
 	rm -rf ${base}/${share}/Bin/i386-linux/mysqld 
 	rm -rf ${base}/${share}/Bin/i386-linux/mDNSResponderPosix
+
+	# Remove the old flac binary because we require it as a dependency anyways
+	rm -rf ${base}/${share}/Bin/i386-linux/flac 
 	
 	# Remove non-Linux binary modules and binaries
 	rm -rf ${base}/${share}/CPAN/arch/5.8/darwin-thread-multi-2level
