For Bug 7794, removed PreventStandby from the Linux Tarballs, Linux RPMs, Debian and MacOSX Platforms...
git-svn-id: file:///home/awy/mirror/slim/7.0/trunk/platforms@20918 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -58,6 +58,7 @@ install:
 	rm -rf ${base}/${share}/Bin/darwin
 	rm -rf ${base}/${share}/Bin/MSWin32-x86-multi-thread
 	rm -rf ${base}/${share}/Bin/powerpc-hardhat-linux
+	rm -rf ${base}/${share}/Slim/Plugin/PreventStandby
 	
 
 	# And aux files needed to run SlimServer
