Modify /usr/share/perl5/Slim/Control/Queries.pm so we don't confuse ReadyNAS users with folders on root.
git-svn-id: file:///home/awy/mirror/slim/7.1/trunk/platforms@22745 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -48,6 +48,9 @@ install:
 	# We need to copy the Slim directory over...
 	cp -r ${source}/Slim ${base}/usr/share/perl5
 
+	# Modify /usr/share/perl5/Slim/Control/Queries.pm so it doesn't confuse ReadyNAS users with folders on root.
+	patch ${base}/usr/share/perl5/Slim/Control/Queries.pm < $(CURDIR)/readynas/Queries.pm.patch
+	
 	# Copy our CPAN directory and locally modified perl modules
 	cp -r ${source}/CPAN ${base}/${share}
 	cp -r ${source}/lib ${base}/${share}
