Removing the two isReadyNAS calls from the Prefs.pm file in favor of using the server.prefs file from the platforms/readynas directory. Saves two calls, and puts all the custom readyNas config options in one place.
git-svn-id: file:///home/awy/mirror/slim/7.2/trunk/platforms@22774 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/server.prefs
+++ b/readynas/server.prefs
@@ -1,4 +1,5 @@
 dbsource: dbi:mysql:database=slimserver
 dbusername: slimserver
 scannerPriority: 20
-resampleArtwork: 1
+resampleArtwork: 0
+disableStatistics: 1
