- Added EXTRAxxFLAGS for debug in Makefile.
git-svn-id: file:///home/awy/mirror/slim/7.2/trunk/platforms@23106 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/contrib/scanner/Makefile
+++ b/readynas/contrib/scanner/Makefile
@@ -29,12 +29,12 @@ CC = gcc
 LDFLAGS := -lmysqlclient -lid3tag -logg -lvorbis -lFLAC -lssl -lgd
 
 ifeq (${DEBUG},1)
-  CFLAGS = -O -Wall -ggdb
+  CFLAGS = ${EXTRACFLAGS} -O -Wall -ggdb
   STRIP = touch
 else
-  CFLAGS = -O2 -Wall
+  CFLAGS = ${EXTRACFLAGS} -O2 -Wall
   STRIP = strip
-  LDFLAGS := ${LDFLAGS} -s
+  LDFLAGS := ${EXTRALDFLAGS} ${LDFLAGS} -s
 endif
 
 
@@ -47,10 +47,12 @@ OBJS = tagutils.o tagutils-plist.o log.o sqlprintf.o textutils.o prefs.o artwork
 usage:
 	@echo
 	@echo "Usage:"
-	@echo "  make all          ... build normally"
-	@echo "  make DEBUG=1 all  ... build with -ggdb"
-	@echo "  make clean        ... clean"
-	@echo "  make TAGS         ... create tag file for emacs"
+	@echo "  make all                        ... build normally"
+	@echo "  make EXTRACFLAGS='-I xxxl all   ... build normally with EXTRACFLAGS"
+	@echo "  make EXTRALDFLAGS='-I xxxl all  ... build normally with EXTRALDFLAGS"
+	@echo "  make DEBUG=1 all                ... build with -ggdb"
+	@echo "  make clean                      ... clean"
+	@echo "  make TAGS                       ... create tag file for emacs"
 	@echo
 
 all: .depend ${EXES}
