fix mp4 transcoding rule
Bug: 9755
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@23760 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/convert.conf
+++ b/readynas/convert.conf
@@ -74,4 +74,5 @@ flc wav * *
 	[flac] -dcs --force-raw-format --endian=little --sign=signed --skip=$START$ --until=$END$ -- $FILE$
 
 mov wav * *
-	[mp42aac] $FILE$ -stdout | [aac2wav] -stdin -stdout
+	# F
+	[mp42aac] $FILE$ -stdout | [aac2wav] -wav -stdin -stdout
