Initial stab at building SC for ReadyNas X86 and ReadyNas Sparc platforms independently. Added new command line arguments --archType to specify architecture. The sparc-linux platform should work exactly the same as it has. The x86 platform is broken right now due to a bad startup script and a mysqld issue...
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@23967 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/control
+++ b/readynas/control
@@ -6,7 +6,7 @@ Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.2
 
 Package: squeezecenter-readynas
-Architecture: sparc
+Architecture: _ARCHTYPE_
 Conflicts: slimp3,slimserver
 Replaces: slimp3,slimserver
 Depends: perl (>= 5.8.1),
