remove mysql binary from readynas builds
Bug: 10137
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@24204 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -54,6 +54,8 @@ install:
 	rm -rf ${source}/Bin/MSWin32-x86-multi-thread
 	rm -rf ${source}/Bin/powerpc-hardhat-linux
 
+	# let's use the system's mysql server
+	rm -rf ${source}/Bin/i386-linux/mysqld
 
 	# And aux files needed to run SqueezeCenter
 	cp -r ${source}/Firmware ${base}/${share}
