remove PreventStandby plugin from ReadyNAS build
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@24209 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -54,6 +54,9 @@ install:
 	rm -rf ${source}/Bin/MSWin32-x86-multi-thread
 	rm -rf ${source}/Bin/powerpc-hardhat-linux
 
+	# remove win32 only plugin
+	rm -rf ${source}/Slim/Plugin/PreventStandby
+
 	# let's use the system's mysql server
 	rm -rf ${source}/Bin/i386-linux/mysqld
 
