use default convert.conf, but add custom-convert.conf with additional mov->wav rule to allow optimized mp4aas/aac2wav
Bug: 10293
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@24323 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -85,7 +85,7 @@ install:
 	cp -r ${source}/*.conf ${base}/etc/squeezecenter
 
 	## Overwrite some default settings with ReadyNas specific settings
-	cp -r ${CURDIR}/readynas/convert.conf ${base}/etc/squeezecenter
+	cp -r ${CURDIR}/readynas/custom-convert.conf ${base}/etc/squeezecenter
 
 	# Copy over the squeezecenter init script...
 	cp -r $(CURDIR)/readynas/squeezecenter.default ${base}/etc/default/squeezecenter
