Fix Debian build to not use system flac/sox
git-svn-id: file:///home/awy/mirror/slim/7.3/trunk/platforms@25761 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -11,7 +11,7 @@ Conflicts: slimp3,slimserver
 Replaces: slimp3,slimserver
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient14-dev | libmysqlclient15-dev,
- mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser, libfreetype6
+ mysql-client-4.1 | mysql-client-5.0, adduser, libfreetype6
 Description: Streaming Audio Server
  SlimServer is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and
