--- a/win32/WHS Add-In/SqueezeCenter/SqueezeCenter.csproj
+++ b/win32/WHS Add-In/SqueezeCenter/SqueezeCenter.csproj
@@ -53,6 +53,10 @@
   <ItemGroup>
     <Reference Include="HomeServerControls, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=x86" />
     <Reference Include="HomeServerExt" />
+    <Reference Include="Jayrock.Json, Version=0.9.8316.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\..\..\..\..\Private\mherger\My Documents\Downloads\jayrock\sandbox\Jelly\bin\Release\Jayrock.Json.dll</HintPath>
+    </Reference>
     <Reference Include="qsmif, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
@@ -60,6 +64,7 @@
     <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.ServiceProcess" />
+    <Reference Include="System.Web.Services" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml" />
     <Reference Include="WHSCommon, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
