--- a/osx/Preference Pane/Info.plist
+++ b/osx/Preference Pane/Info.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SqueezeCenter</string>
+	<string>Squeezebox Server</string>
 	<key>CFBundleGetInfoString</key>
-	<string>SqueezeCenter 7.4, Copyright 2002-2008 Logitech</string>
+	<string>Squeezebox Server 7.4, Copyright 2002-2009 Logitech</string>
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.2.2</string>
 	<key>CFBundleName</key>
-	<string>SqueezeCenter</string>
+	<string>Squeezebox Server</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
