--- a/osx/Preference Pane/Installer.plist
+++ b/osx/Preference Pane/Installer.plist
@@ -5,9 +5,9 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SqueezeCenter Installer</string>
+	<string>Squeezebox Server Installer</string>
 	<key>CFBundleGetInfoString</key>
-	<string>SqueezeCenter Installer 7.4, Copyright 2003-2008 Logitech</string>
+	<string>Squeezebox Server Installer 7.4, Copyright 2003-2009 Logitech</string>
 	<key>CFBundleIconFile</key>
 	<string>installer.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.2.2</string>
 	<key>CFBundleName</key>
-	<string>SqueezeCenter Installer</string>
+	<string>Squeezebox Server Installer</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
