--- a/osx/Preference Pane/Info.plist
+++ b/osx/Preference Pane/Info.plist
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>English</string>
 	<key>CFBundleExecutable</key>
-	<string>SqueezeCenter</string>
+	<string>Squeezebox</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Squeezebox Server 7.4, Copyright 2002-2008 Logitech</string>
+	<string>Squeezebox Server 7.4, Copyright 2002-2009 Logitech</string>
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
@@ -15,7 +15,7 @@
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.2.2</string>
 	<key>CFBundleName</key>
-	<string>Squeezebox Server</string>
+	<string>Squeezebox</string>
 	<key>CFBundlePackageType</key>
 	<string>BNDL</string>
 	<key>CFBundleShortVersionString</key>
