Fixup debian rules to remove additional modules it doesn't need
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@27984 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -51,7 +51,9 @@ install:
 
 	# Remove non-Linux binary modules and binaries
 	rm -rf ${base}/${share}/CPAN/arch/5.8/darwin-thread-multi-2level
-	rm -rf ${base}/${share}/CPAN/arch/5.8/MSWin32-x86-multi-thread
+	rm -rf ${base}/${share}/CPAN/arch/5.8/sparc-linux
+	rm -rf ${base}/${share}/CPAN/arch/5.10/darwin-thread-multi-2level
+	rm -rf ${base}/${share}/CPAN/arch/5.10/MSWin32-x86-multi-thread
 	rm -rf ${base}/${share}/Bin/darwin
 	rm -rf ${base}/${share}/Bin/MSWin32-x86-multi-thread
 	rm -rf ${base}/${share}/Bin/powerpc-hardhat-linux
