Bug: 12962 Desc: First stab at renaming all of our linux packages to squeezeboxserver, and adjusting their installdirs from squeezecenter to squeezebox. Huge amount of changes here, likely to break the builds.
Bug: 12962
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28028 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -1,19 +1,18 @@
-Source: squeezecenter
+Source: squeezeboxserver
 Section: sound
 Priority: optional
 Maintainer: Logitech/Slim Devices <debian@slimdevices.com>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.2
 
-Package: squeezecenter
+Package: squeezeboxserver
 Architecture: all
-Conflicts: slimp3,slimserver
-Replaces: slimp3,slimserver
+Conflicts: slimp3,slimserver,squeezecenter
+Replaces: slimp3,slimserver,squeezecenter
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient14-dev | libmysqlclient15-dev,
  mysql-client-4.1 | mysql-client-5.0, adduser, libfreetype6
 Description: Streaming Audio Server
- SlimServer is a cross-platform streaming server that supports a wide range
- of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and
- WMA.
+ SqueezeBox Server is a cross-platform streaming server that supports a wide range
+ of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and WMA.
  .
