--- a/readynas/control
+++ b/readynas/control
@@ -1,21 +1,20 @@
-Source: squeezecenter
+Source: squeezeboxserver-readynas
 Section: sound
 Priority: optional
 Maintainer: Logitech/Slim Devices <debian@slimdevices.com>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.2
 
-Package: squeezecenter-readynas
+Package: squeezeboxserver-readynas
 Architecture: _ARCHTYPE_
-Conflicts: slimp3,slimserver
-Replaces: slimp3,slimserver
+Conflicts: slimp3,slimserver,squeezecenter
+Replaces: slimp3,slimserver,squeezecenter
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient15off,
  mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser, libfreetype6,
  libgd2-noxpm, libmad0, libpng12-0, libvorbis0a, libvorbisenc2,
  libvorbisfile3, sox
 Description: Streaming Audio Server
- SqueezeCenter is a cross-platform streaming server that supports a wide range
- of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and
- WMA.
+ SqueezeBox Server is a cross-platform streaming server that supports a wide range
+ of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and WMA.
  .
