This should force the squeezebox.init script to be copied in to /etc/init.d/. It was likely being ignored because the name of the script no longer matches the package name.
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28046 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -84,6 +84,7 @@ install:
 
 	# Copy over the squeezebox init script...
 	cp -r $(CURDIR)/debian/squeezebox.default ${base}/etc/default/squeezebox
+	cp -r $(CURDIR)/debian/squeezebox.init ${base}/etc/init.d/squeezebox
 
 	# Wrapper to keep SqueezeCenter alive.
 	cp -r $(CURDIR)/debian/squeezebox_safe ${base}/usr/sbin/squeezebox_safe
