The init.d directory needs to be here in order to copy into it
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28048 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -26,6 +26,7 @@ install:
 	# Create directories needed.
 	install -d -m0755 ${base}/etc/default/
 	install -d -m0755 ${base}/etc/squeezebox/
+	install -d -m0755 ${base}/etc/init.d/
 	install -d -m0755 ${base}/usr/share/perl5/
 	install -d -m0755 ${base}/${share}
 	install -d -m0755 ${base}/usr/share/doc/squeezebox/
