Fixed Bug 13252 - downgrade DBD::mysql to 3.0002 to fix crasher
Bug: 13252
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28086 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -34,8 +34,7 @@ install:
 
 	## This only occurs if the files exist ... if they do not exist here, they were probably
 	## removed by the buildme.pl script on purpose.
-	# This contains attributes.pm which Netgear doesn't ship, and an old version of DBD::mysql
-	# since I can't get the latest to run without crashing
+	# This contains attributes.pm which Netgear doesn't ship
 	cp -rf $(CURDIR)/readynas/CPAN ${source}/
 
 	# Copy our server files to the appropriate Debian locations.
