Move everything from squeezebox to squeezeboxserver so that the Debian package system works properly. Caused alot of weird issues to have certain file and pathnames not match the actual package name.
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28197 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/rules
+++ b/debian/rules
@@ -7,10 +7,10 @@ export DH_VERBOSE=1
 
 package=squeezeboxserver
 base=$(CURDIR)/debian/$(package)
-share=usr/share/squeezebox/
+share=usr/share/squeezeboxserver/
 source=$(CURDIR)/../server
 
-varlib=var/lib/squeezebox
+varlib=var/lib/squeezeboxserver
 
 
 clean:
@@ -25,18 +25,18 @@ install:
 
 	# Create directories needed.
 	install -d -m0755 ${base}/etc/default/
-	install -d -m0755 ${base}/etc/squeezebox/
+	install -d -m0755 ${base}/etc/squeezeboxserver/
 	install -d -m0755 ${base}/etc/init.d/
 	install -d -m0755 ${base}/usr/share/perl5/
 	install -d -m0755 ${base}/${share}
-	install -d -m0755 ${base}/usr/share/doc/squeezebox/
+	install -d -m0755 ${base}/usr/share/doc/squeezeboxserver/
 	install -d -m0755 ${base}/${varlib}/prefs
 	install -d -m0755 ${base}/${varlib}/cache
 
 	# Copy our server files to the appropriate Debian locations.
-	install -m0755 ${source}/slimserver.pl ${base}/usr/sbin/squeezebox-server
-	install -m0755 ${source}/scanner.pl ${base}/usr/sbin/squeezebox-scanner
-	install -m0755 ${source}/cleanup.pl ${base}/usr/sbin/squeezebox-cleanup
+	install -m0755 ${source}/slimserver.pl ${base}/usr/sbin/squeezeboxserver
+	install -m0755 ${source}/scanner.pl ${base}/usr/sbin/squeezeboxserver-scanner
+	install -m0755 ${source}/cleanup.pl ${base}/usr/sbin/squeezeboxserver-cleanup
 
 	cp -r ${source}/Slim ${base}/usr/share/perl5/
 	
@@ -81,18 +81,14 @@ install:
 	rm ${base}/${share}/MySQL/errmsg.*
 
 	# Set up the pref's file locations...
-	cp -r ${source}/*.conf ${base}/etc/squeezebox
-
-	# Copy over the squeezebox init script...
-	cp -r $(CURDIR)/debian/squeezebox.default ${base}/etc/default/squeezebox
-	cp -r $(CURDIR)/debian/squeezebox.init ${base}/etc/init.d/squeezebox
+	cp -r ${source}/*.conf ${base}/etc/squeezeboxserver
 
 	# Wrapper to keep SqueezeCenter alive.
-	cp -r $(CURDIR)/debian/squeezebox_safe ${base}/usr/sbin/squeezebox_safe
+	cp -r $(CURDIR)/debian/squeezeboxserver_safe ${base}/usr/sbin/squeezeboxserver_safe
 
 	# Documentation
-	cp ${source}/Change* ${base}/usr/share/doc/squeezebox/
-	cp ${source}/Installation.txt ${base}/usr/share/doc/squeezebox/
+	cp ${source}/Change* ${base}/usr/share/doc/squeezeboxserver/
+	cp ${source}/Installation.txt ${base}/usr/share/doc/squeezeboxserver/
 	cp ${source}/License.txt $(CURDIR)/debian/copyright
 
 	# Copy the revision file
