Bug 13327: Rename all of the internal debian package stuff to squeezebox server. This should help it start up automatically on installation.
Bug: 13327
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28203 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/control
+++ b/readynas/control
@@ -1,11 +1,11 @@
-Source: squeezeboxserver-readynas
+Source: squeezeboxserver
 Section: sound
 Priority: optional
 Maintainer: Logitech/Slim Devices <debian@slimdevices.com>
 Build-Depends: debhelper (>= 4.0.0)
 Standards-Version: 3.6.2
 
-Package: squeezeboxserver-readynas
+Package: squeezeboxserver
 Architecture: _ARCHTYPE_
 Conflicts: slimp3,slimserver,squeezecenter
 Replaces: slimp3,slimserver,squeezecenter
@@ -15,6 +15,6 @@ Depends: perl (>= 5.8.1),
  libgd2-noxpm, libmad0, libpng12-0, libvorbis0a, libvorbisenc2,
  libvorbisfile3, sox
 Description: Streaming Audio Server
- SqueezeBox Server is a cross-platform streaming server that supports a wide range
+ Squeezebox Server is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and WMA.
  .
