Bug 13327: Fix typo in rules file
Bug: 13327
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28209 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/rules
+++ b/readynas/rules
@@ -90,8 +90,8 @@ install:
 	cp -rf ${CURDIR}/readynas/custom-convert.conf ${base}/etc/squeezeboxserver
 
 	# Copy over the squeezecenter init script...
-	cp -rf $(CURDIR)/readynas/squeezeboxserver.default ${base}/etc/default/
-	cp -rf $(CURDIR)/readynas/squeezeboxserver.init ${base}/etc/init.d/
+	cp -rf $(CURDIR)/readynas/squeezeboxserver.default ${base}/etc/default/squeezeboxserver
+	cp -rf $(CURDIR)/readynas/squeezeboxserver.init ${base}/etc/init.d/squeezeboxserver
 
 	# Wrapper to keep SqueezeBox Server alive.
 	cp -rf $(CURDIR)/readynas/squeezeboxserver_safe ${base}/usr/sbin/
