Bug 12962: Renamed things from squeezebox to squeezeboxserver. Not having the filenames in-line with the package name caused more confusion than it was worth. Also removed unused Squeezebox Repo files. Will upload new ones shortly.
Bug: 12962
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28214 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/redhat/squeezeboxserver.config
+++ b/redhat/squeezeboxserver.config
@@ -1,9 +1,9 @@
 # Edit this to suit your setup
-SQUEEZEBOX_USER="squeezebox"
+SQUEEZEBOX_USER="squeezeboxserver"
 SQUEEZEBOX_HOME="/usr/libexec"
-SQUEEZEBOX_CFG_DIR="/var/lib/squeezebox/prefs"
-SQUEEZEBOX_LOG_DIR="/var/log/squeezebox"
-SQUEEZEBOX_CACHE_DIR="/var/lib/squeezebox/cache"
+SQUEEZEBOX_CFG_DIR="/var/lib/squeezeboxserver/prefs"
+SQUEEZEBOX_LOG_DIR="/var/log/squeezeboxserver"
+SQUEEZEBOX_CACHE_DIR="/var/lib/squeezeboxserver/cache"
 SQUEEZEBOX_CHARSET="utf8"
 SQUEEZEBOX_ARGS="--daemon --prefsdir=$SQUEEZEBOX_CFG_DIR --logdir=$SQUEEZEBOX_LOG_DIR --cachedir=$SQUEEZEBOX_CACHE_DIR --charset=$SQUEEZEBOX_CHARSET"
 
