apply a series of patches by Sébastien Phélep to clean up the ReadyNAS installation. Thanks a lot for your work on this topic!
Bug: 14451
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28775 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/control
+++ b/readynas/control
@@ -7,8 +7,8 @@ Standards-Version: 3.6.2
 
 Package: squeezeboxserver
 Architecture: _ARCHTYPE_
-Conflicts: slimp3,slimserver,squeezecenter
-Replaces: slimp3,slimserver,squeezecenter
+Conflicts: slimp3,slimserver,squeezecenter,squeezecenter-readynas
+Replaces: slimp3,slimserver,squeezecenter,squeezecenter-readynas
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient15off,
  mysql-client-4.1 | mysql-client-5.0, flac, sox, adduser, libfreetype6,
