--- a/readynas/rules
+++ b/readynas/rules
@@ -112,7 +112,10 @@ binary-indep: install
 	dh_installdocs
 	dh_install
 	dh_installlogrotate
-	dh_installinit
+	# Bug 14551: don't provide rc.d init scripts in the ReadyNAS' debian
+	# archive for squeezeboxserver, since the service is already managed
+	# by Frontview's plugins mechanism. 
+	#dh_installinit
 	dh_installman
 	dh_compress
 	dh_fixperms
