Fixed bug 14580, Fix custom-convert file for ReadyNAS, wav was changed to pcm
Bug: 14580
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28857 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/readynas/custom-convert.conf
+++ b/readynas/custom-convert.conf
@@ -1,3 +1,3 @@
-mov wav * *
+mov pcm * *
 	# F
-	[mp42aac] $FILE$ -stdout | [aac2wav] -wav -stdin -stdout
+	[mp42aac] $FILE$ -stdout | [aac2wav] -stdin -stdout
