--- a/debian/rules
+++ b/debian/rules
@@ -52,12 +52,13 @@ install:
 
 	# Remove non-Linux binary modules and binaries
 	rm -rf ${base}/${share}/CPAN/arch/5.8/darwin-thread-multi-2level
+	rm -rf ${base}/${share}/CPAN/arch/5.8/i386-freebsd-64int
 	rm -rf ${base}/${share}/CPAN/arch/5.8/sparc-linux
 	rm -rf ${base}/${share}/CPAN/arch/5.10/darwin-thread-multi-2level
 	rm -rf ${base}/${share}/CPAN/arch/5.10/MSWin32-x86-multi-thread
 	rm -rf ${base}/${share}/Bin/darwin
 	rm -rf ${base}/${share}/Bin/MSWin32-x86-multi-thread
-	rm -rf ${base}/${share}/Bin/powerpc-hardhat-linux
+	rm -rf ${base}/${share}/Bin/i386-freebsd-64int
 	rm -rf ${base}/usr/share/perl5/Slim/Plugin/PreventStandby
 	
 
