libfreetype is no longer required, it's linked properly in GD now
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@28879 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -11,8 +11,8 @@ Conflicts: slimp3,slimserver,squeezecenter
 Replaces: slimp3,slimserver,squeezecenter
 Depends: perl (>= 5.8.1),
  mysql-server-4.1 | mysql-server-5.0, libmysqlclient14-dev | libmysqlclient15-dev,
- mysql-client-4.1 | mysql-client-5.0, adduser, libfreetype6
+ mysql-client-4.1 | mysql-client-5.0, adduser
 Description: Streaming Audio Server
- SqueezeBox Server is a cross-platform streaming server that supports a wide range
+ Squeezebox Server is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and WMA.
  .
