Fixed bug 14905, allow MySQL 5.1 as server in Debian
Bug: 14905
git-svn-id: file:///home/awy/mirror/slim/7.4/trunk/platforms@29012 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/debian/control
+++ b/debian/control
@@ -10,8 +10,8 @@ Architecture: all
 Conflicts: slimp3,slimserver,squeezecenter
 Replaces: slimp3,slimserver,squeezecenter
 Depends: perl (>= 5.8.8),
- mysql-server-4.1 | mysql-server-5.0, libmysqlclient14-dev | libmysqlclient15-dev,
- mysql-client-4.1 | mysql-client-5.0, adduser
+ mysql-server-4.1 | mysql-server-5.0 | mysql-server-5.1, libmysqlclient14-dev | libmysqlclient15-dev | libmysqlclient16-dev,
+ mysql-client-4.1 | mysql-client-5.0 | mysql-client-5.1, adduser
 Description: Streaming Audio Server
  Squeezebox Server is a cross-platform streaming server that supports a wide range
  of formats, including AAC, AIFF, FLAC, Ogg Vorbis, MP3, WAV, and WMA.
