--- a/osx/Preference Pane/Launcher.plist
+++ b/osx/Preference Pane/Launcher.plist
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!DOCTYPE plist PUBLIC "-//Apple Computer//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+<!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
@@ -7,23 +7,23 @@
 	<key>CFBundleExecutable</key>
 	<string>Launcher</string>
 	<key>CFBundleGetInfoString</key>
-	<string>Launcher - Copyright 2002-2008 Logitech. All rights reserved.</string>
+	<string>Launcher - Copyright 2002-2010 Logitech. All rights reserved.</string>
 	<key>CFBundleIconFile</key>
 	<string>icon.icns</string>
 	<key>CFBundleIdentifier</key>
 	<string>com.slimdevices.slim</string>
 	<key>CFBundleInfoDictionaryVersion</key>
-	<string>6.2.2</string>
+	<string>7.5.0</string>
 	<key>CFBundleName</key>
 	<string>Launcher</string>
 	<key>CFBundlePackageType</key>
 	<string>APPL</string>
 	<key>CFBundleShortVersionString</key>
-	<string>5.1.3</string>
+	<string>7.5.0</string>
 	<key>CFBundleSignature</key>
 	<string>SLIM</string>
 	<key>CFBundleVersion</key>
-	<string>5.1.3</string>
+	<string>7.5.0</string>
 	<key>LSBackgroundOnly</key>
 	<string>1</string>
 	<key>NSBackgroundOnly</key>
