replace broken SB icon artwork file
git-svn-id: file:///home/awy/mirror/slim/7.5/trunk/platforms@30427 62299810-d8cb-41fd-93b7-d32162e5a4a4

--- a/win32/WHS Add-In/SqueezeCenter/Squeezebox.csproj
+++ b/win32/WHS Add-In/SqueezeCenter/Squeezebox.csproj
@@ -135,7 +135,7 @@
     </BootstrapperPackage>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\squeezebox.jpg" />
+    <None Include="Resources\icon_fab4_fb.png" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
